--- a/WindowsFormsApplication1/WindowsFormsApplication2/WindowsFormsApplication2.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication2/WindowsFormsApplication2.csproj
@@ -81,6 +81,7 @@
     </Compile>
     <Compile Include="Model\DALLogin.cs" />
     <Compile Include="Model\Login.cs" />
+    <Compile Include="Model\Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -107,6 +108,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="MobileShop" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
